# paper-poller

./: .gitattributes  README.md  config.py  paper-poller.py  paper_poller.py  pyproject.toml
.github/workflows/: tests.yml
tests/: conftest.py  test_config.py  test_integration.py  test_paper_api.py  test_utils.py
